style: prevent WebView text size zoom scaling layout breakage via global text-size-adjust rules

--- a/Aishwaryam-web-clone/src/index.css
+++ b/Aishwaryam-web-clone/src/index.css
@@ -65,6 +65,8 @@ html, body {
   overflow: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 /* Base mobile & tablet styling (fluid, full-screen) */
